[project]
name = "llm-fragments-github"
version = "0.2"
description = "Load GitHub repository contents as LLM fragments"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "llm"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/simonw/llm-fragments-github"
Changelog = "https://github.com/simonw/llm-fragments-github/releases"
Issues = "https://github.com/simonw/llm-fragments-github/issues"
CI = "https://github.com/simonw/llm-fragments-github/actions"

[project.entry-points.llm]
fragments_github = "llm_fragments_github"

[project.optional-dependencies]
test = ["pytest"]
